<resources>
    <string name="app_name">Swachh Bharat</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="google_maps_key">AIzaSyAd_u0zQ5Br58HDS6ZZmEfl3AxdwSlW8uc</string>
    <string name="google_map_stat_key">AIzaSyDBNQSDSxMdHnTyjXZcQxfh5XyD_cyMFM0</string>


    <!-- fragment_feed.xml start -->
    <string name="Connect">Swachh Connect</string>
    <string name="news">NEWS</string>
    <string name="news1"><a href="http://economictimes.indiatimes.com/topic/Swachh-Bharat-Abhiyaan">Get latest news on Swachh Bharat Abhiyan</a></string>
    <string name="iAuth">OFFICIAL AUTHORITIES</string>
    <string name="iAuth1"><a href="https://swachhbharat.mygov.in/">My Government</a></string>
    <string name="iAuth2"><a href="http://sbm.gov.in/sbm/">Ministry of Drinking Water and Sanitation</a></string>
    <string name="iAuth3"><a href="http://swachhbharaturban.gov.in">Ministry of Urban Development</a></string>
    <string name="iAuth4"><a href="http://www.nhai.org.in/sba/overview.aspx">National Highways Authority of India</a></string>
    <string name="iAuth5"><a href="http://inbministry.blogspot.in/p/canvas.html">Ministry of Information and Broadcasting</a></string>
    <string name="iAuth6"><a href="http://103.7.128.243:8085/swachhvidhyalaya/">Ministry of Human Resource Development</a></string>
    <string name="iArt">RELATED ARTICLES</string>
    <string name="iArt1"><a href="http://www.sulabhenvis.nic.in/Database/SwachhBharatAbhiyan_7101.aspx">Swachh Bharat Abhiyan</a></string>
    <string name="iArt2"><a href="http://www.pradhanmantriyojana.co.in/swachh-bharat-abhiyan/">Swachh Pakhwada</a></string>
    <string name="iArt3"><a href="http://sbm.gov.in/tsc/Report_NBA/Physical/Rpt_TargetVsAch_SelectionBased.aspx">Target vs Achievement</a></string>
    <string name="iArt4"><a href="http://www.thebetterindia.com/topics/sanitation/">Articles on Sanitation</a></string>
    <string name="iVideo">VIDEOS ON HYGIENE</string>
    <string name="iVideo1"><a href="https://www.youtube.com/watch?v=Zap9wSEig-Y">Hygiene and Sanitation in Hindi</a></string>
    <string name="iVideo2"><a href="https://www.youtube.com/watch?v=gYf2iESJ2A8">Animation on Drinking Water in Hindi</a></string>
    <string name="iVideo3"><a href="https://www.youtube.com/watch?v=DqvQqasGGQ4">Animation on Home and Surroundings in English</a></string>
    <string name="iVideo4"><a href="https://www.youtube.com/watch?v=zou4KpufAAs">Animation on Waste Management in English</a></string>
    <string name="iVideo5"><a href="https://www.youtube.com/watch?v=WbxnbczI3bs">Composting at Home in English</a></string>
    <string name="follow">Join PM</string>
    <string name="follow1"><a href="http://www.pmindia.gov.in/en/interact-with-honble-pm/">Share your views with our PM Shri Narendra Modi on our mission for a cleaner India</a></string>
    <!-- fragment_feed.xml end -->

    <!-- dialog_new_feed.xml start -->
    <string name="Post">Post</string>
    <string name="Cancel">Cancel</string>
    <string name="feedContent">Content</string>
    <string name="feedTitle">Title</string>
    <string name="newPost">Create a New Post</string>
    <!-- dialog_new_feed.xml end -->

    <!-- dialog_social.xml start -->
    <string name="iWantTo">I want to...</string>
    <string name="RadioButton1">conduct a meeting</string>
    <string name="RadioButton2">launch a mission</string>
    <string name="RadioButton3">organize a rally</string>
    <string name="RadioButton4">host a seminar</string>
    <string name="RadioButton5">clean a public place</string>
    <string name="details">Details</string>
    <!-- dialog_social.xml end -->
    
    <!-- dialog_share.xml start -->
    <string name="iWantToMark">I want to mark...</string>
    <string name="radio1">A garbage collection point</string>
    <string name="radio2">An untidy place</string>
    <string name="radio3">A location which is never cleaned</string>
    <string name="radio4">An open manhole</string>
    <string name="radio5">Stagnant water</string>
    <!-- dialog_share.xml end -->

    <string name="radio_bt_take_task">Take Up this task !</string>
    <string name="radio_bt_leave_task">Leave this task</string>
    <string name="radio_bt_delete_task">Delete this task</string>
    <string name="radio_bt_completed">Mark as completed</string>
    <string name="delete_task_confirmation">Do you wish to delete this task ?</string>

    <!-- activity_login.xml start -->
    <string name="madeWith">made with</string>
    <string name="in">in</string>
    <string name="type_individual">Individual</string>
    <string name="type_ngo">NGO</string>
    <string name="type_govt">Government Organisation</string>
    <!-- activity_login.xml end -->

    <!--    PermissionsUtils.java start    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <!--    PermissionsUtils.java end    -->

</resources>
