<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/socialTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iWantTo"
        android:textColor="@color/textPrimary"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical|fill">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/radioGroupSocial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RadioButton1"
                    android:textColor="@color/textSecondary"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RadioButton2"
                    android:textColor="@color/textSecondary"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RadioButton3"
                    android:textColor="@color/textSecondary"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RadioButton4"
                    android:textColor="@color/textSecondary"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/radioButton5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RadioButton5"
                    android:textColor="@color/textSecondary"
                    android:textSize="15sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/socialDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details"
                android:inputType="textMultiLine"
                android:textColor="@color/textSecondary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_mylocation"
                android:text=""/>

            <com.google.android.gms.maps.MapView
                android:id="@+id/map"
                android:layout_gravity="fill_vertical|fill_horizontal|fill"
                android:layout_height="200dp"
                android:layout_width="300dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelSocial"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/postSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/Post"
            android:textColor="@color/white" />

        <!-- NOTE - background tint is applicable after API 21 only -->
    </LinearLayout>

</LinearLayout>
