<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#ee7621"
    >
  
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
                <TextView
                    android:id="@+id/news"
                    android:text="@string/news"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/news1"
                    android:text="@string/news1"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/news"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
</RelativeLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/card_view2"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_below="@+id/card_view1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/iAuth"
                    android:text="@string/iAuth"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"

                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iAuth1"
                    android:text="@string/iAuth1"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iAuth"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iAuth2"
                    android:text="@string/iAuth2"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iAuth1"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iAuth3"
                    android:text="@string/iAuth3"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iAuth2"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iAuth4"
                    android:text="@string/iAuth4"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iAuth3"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iAuth5"
                    android:text="@string/iAuth5"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iAuth4"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iAuth6"
                    android:text="@string/iAuth6"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iAuth5"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view3"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_below="@+id/card_view2">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/iArt"
                    android:text="@string/iArt"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iArt1"
                    android:text="@string/iArt1"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iArt"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iArt2"
                    android:text="@string/iArt2"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iArt1"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iArt3"
                    android:text="@string/iArt3"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iArt2"
                    android:layout_marginTop="10dp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iArt4"
                    android:text="@string/iArt4"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                android:layout_below="@+id/iArt3"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
</RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view4"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_below="@+id/card_view3">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
                <TextView
                    android:id="@+id/iVideo"
                    android:text="@string/iVideo"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iVideo1"
                    android:text="@string/iVideo1"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iVideo"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iVideo2"
                    android:text="@string/iVideo2"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iVideo1"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iVideo3"
                    android:text="@string/iVideo3"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iVideo2"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iVideo4"
                    android:text="@string/iVideo4"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iVideo3"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/iVideo5"
                    android:text="@string/iVideo5"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/iVideo4"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
</RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view5"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_below="@+id/card_view4">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
                <TextView
                    android:id="@+id/follow"
                    android:text="@string/follow"
                    android:textSize="25sp"
                    android:textColor="#000000"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/follow1"
                    android:text="@string/follow1"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:layout_below="@+id/follow"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
</RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
