<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal|center"
    tools:context="com.teamhack.swachbharat.Login.LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/madeWith"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/madeWith"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/madeWith"
            android:layout_centerHorizontal="true"
            android:text="@string/in"
            android:textSize="40sp" />


        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/in"
            android:layout_centerInParent="true"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" />

        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_above="@+id/sign_in_button"
            android:layout_alignLeft="@+id/sign_in_button"
            android:layout_alignStart="@+id/sign_in_button"
            android:src="@drawable/love" />

        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_above="@+id/sign_in_button"
            android:layout_alignEnd="@+id/sign_in_button"
            android:layout_alignRight="@+id/sign_in_button"
            android:src="@drawable/india" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="right"
            android:id="@+id/layout_info"
            android:layout_marginTop="20dp"
            android:padding="5dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_user_info"
                android:hint="Say something about yourself" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Set"
                android:id="@+id/bt_user_info"
                style="@style/Base.CardView"
                android:backgroundTint="@color/colorAccent" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_choose"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose your Role"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="normal|bold" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/type_individual"
                android:id="@+id/bt_individual"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor="@android:color/white"
                android:elevation="5dp"
                android:background="@drawable/button_rounded" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/type_ngo"
                android:id="@+id/bt_ngo"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor="@android:color/white"
                android:elevation="5dp"
                android:background="@drawable/button_rounded" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/type_govt"
                android:id="@+id/bt_govt"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor="@android:color/white"
                android:elevation="5dp"
                android:background="@drawable/button_rounded" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
